[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["udonself <121800517+udonself@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
